--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   provider: 4.3.3
   get: ^3.26.0
   logger: ^0.9.4
+  intl: ^0.17.0
 
 
   # The following adds the Cupertino Icons font to your application.
