--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -23,24 +23,22 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-#  flutter_circular_chart: ^0.1.0
+  #  flutter_circular_chart: ^0.1.0
   syncfusion_flutter_gauges: ^18.4.44
   line_awesome_flutter: ^1.0.1
   auto_size_text: ^2.1.0
   # mobx: ^1.2.1+4
   # flutter_mobx: ^1.1.0+2
-  path_provider: ^1.6.27
-  hive: ^1.4.4+1
-  hive_flutter: ^0.3.1
+  path_provider: ^2.0.0
+  hive: ^2.0.0
+  hive_flutter: ^1.0.0
   flutter_boxicons: ^2.0.2
   provider: 4.3.3
   get: ^3.26.0
   logger: ^0.9.4
   intl: ^0.17.0
   adaptive_dialog: ^0.10.0+5
-
-
-
+  google_fonts: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -51,14 +49,13 @@ dev_dependencies:
     sdk: flutter
   mobx_codegen: ^1.1.2
   build_runner: ^1.11.1
-  hive_generator: ^0.8.2
+  hive_generator: ^1.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -66,7 +63,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - images/image.png
+    - images/image.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
