--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   flutter_boxicons: ^2.0.2
   provider: 4.3.3
   get: ^3.26.0
-  logger: ^0.9.4
+  simple_logger: ^1.8.0+1
   intl: ^0.17.0
   adaptive_dialog: ^0.10.0+5
   google_fonts: ^2.0.0
