--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,9 +40,11 @@ dependencies:
   adaptive_dialog: ^0.10.0+5
   google_fonts: ^2.0.0
   syncfusion_flutter_charts: ^18.4.48
+  getwidget: ^1.2.4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+
 
 dev_dependencies:
   flutter_test:
